--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -1,24 +1,12 @@
 {
   "compilerOptions": {
-    "strict": false,
-    "outDir": "./dist",
-    "module": "commonjs",
-    "target": "es2021",
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "sourceMap": true,
-    "rootDirs": ["src", "tests"],
-    // "rootDir": "src",
-    "baseUrl": "src",
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "paths": {
-      "@/*": ["*"]
-    }
+    "strict": true,
+    "types": ["node"]
   },
-  "include": ["src/**/*.ts"]
-  //"exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
