--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,3 +23,13 @@
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.19.3",
+    "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "slugify": "^1.6.6",
+    "uuid": "^11.1.0"
+  }
+}
+
