--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -1,12 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
-    "types": ["node"]
-  },
+  "extends": "../../tsconfig.base.json",
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
