--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
     "prettier": "^3.4.2",
     "turbo": "^2.3.3",
     "typescript": "^5.7.3"
@@ -18,6 +19,17 @@
   },
   "dependencies": {
     "@aws-sdk/s3-request-presigner": "^3.893.0",
-    "glob": "^11.0.1"
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "glob": "^11.0.1",
+    "mongoose": "^8.19.3",
+    "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
+    "slugify": "^1.6.6",
+    "uuid": "^11.1.0"
   }
 }
